# rhetorlint-spec

./: .gitignore  HANDOFF-PUBLISH-2026-07-23.md  LICENSE  NPM_DEPLOY.md  PYPI_DEPLOY.md  README.md  package.json
.github/workflows/: ci.yml  release.yml
apps/explorer/: index.html
apps/widget/: README.md  background.js  bookmarklet.html  build.mjs  content.js  manifest.json
apps/widget/src/: panel.js
conformance/: README.md  cases.json
impl/go/: README.md  go.mod  rhetorlint.go  rhetorlint_test.go
impl/python/: README.md  pyproject.toml  rhetorlint.py  rules_en.json  test_conformance.py
scripts/: demo.mjs  publish-npm-ci.mjs  publish-npm-interactive.zsh
spec/: README.md  output.schema.json  taxonomy.yaml
test/: analyze.test.mjs  cli.test.mjs  conformance.test.mjs  package-types.test.mjs  signals.test.mjs  widget-build.test.mjs
