[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhetorlint"
version = "0.1.0"
description = "Reference Python engine for the RhetorLint spec: mark rhetorical tells in the words, on-device, zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["rhetoric", "manipulation", "media-literacy", "propaganda-techniques", "text-analysis"]

[project.urls]
Homepage = "https://github.com/cambridgetcg/rhetorlint-spec"
Repository = "https://github.com/cambridgetcg/rhetorlint-spec"

[project.scripts]
rhetorlint = "rhetorlint:_main"

[tool.hatch.build.targets.wheel]
# Single-module package. PyPI publish (a follow-up) will also bundle rules.json
# as package data so the wheel is self-contained.
only-include = ["rhetorlint.py"]
sources = ["."]
