[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhetorlint"
version = "0.1.0"
description = "Reference Python engine for the RhetorLint spec: mark rhetorical tells in the words, on-device, zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["rhetoric", "manipulation", "media-literacy", "propaganda-techniques", "text-analysis"]

[project.urls]
Homepage = "https://github.com/cambridgetcg/rhetorlint-spec"
Repository = "https://github.com/cambridgetcg/rhetorlint-spec"

[project.scripts]
rhetorlint = "rhetorlint:_main"

[tool.hatch.build.targets.wheel]
# Single-module package + its bundled rule pack, so the wheel is self-contained
# (load_default_rules reads rules_en.json when the repo copy isn't present).
sources = ["."]

[tool.hatch.build.targets.wheel.force-include]
"rhetorlint.py" = "rhetorlint.py"
"rules_en.json" = "rules_en.json"
